	  system messages, and fix statusbar message length.
	  Affects files.c:load_open_file(), nano.c:main(), 
	  search.c:findnextstr(), winio.c:statusbar() and 
	  do_cursorpos() (David Benbennick).
	- Fix nano crashing when searching/replacing an invalid
	  regex (try "^*").  Changed regexp_init() to return 
	  1 or 0 based on regcomp()'s return value and search_init 
	  to exit with an error message (sorry Jordi!)
	- Move regcomp into rcfile.c rather than each display refresh
	  of winio.c.  New function rcfile.c:nregcomp().
	  This fixes much of nano's resource hogging behavior
	  in syntax higlighting. (David Benbennick).
	- Fix justify failing for certain lines, new function 
	  nano.c:breakable() (David Benbennick).
	- Fix screen getting trashed on signals nano can catch
	  (TERM and HUP).  New global variable curses_ended, 
	  changes to winio.c:statubar() and nano.c:die()
	  (David Benbennick).
- cut.c:
  do_cut_text()
	- Fix incorrect cursor location when cutting long lines
	  (David Benbennick).
- files.c:
	- Set a default PATH_MAX for getcwd() etc calls (David 
	  Benbennick).
  do_browse_from()
	- Fix path checking to fix bad paths, escaping 
	  the operating directory, new function readable_dir() (David 
	  Benbennick).
  do_browser()
	- Fix incorrect path check for check_operating_dir() 
	  (David Benbennick).
	- Fix goto directory operating dir check and tilde expansion
	  (David Benbennick).
	- Even more checks and operating dir fixes (David Benbennick).
  do_insertfile()
	- Add some more checks and fix recursion when toggling 
	  multibuffer (David Benbennick).
  open_file()
	- Fix FD leak with file load error (David Benbennick).
  add_open_file()
	- Revert the fix for the supposed minor logic error from before;
	  it was keeping some updates from happening when they should,
	  which was leading to segfaults with both multibuffer and view
	  mode on. (DLR; found by David Benbennick)
  save_history()