@@ -20,7 +20,8 @@ CVS Code -
 	- Fix nano crashing when searching/replacing an invalid
 	  regex (try "^*").  Changed regexp_init() to return 
 	  1 or 0 based on regcomp()'s return value and search_init 
-	  to exit with an error message (sorry Jordi!)
+	  to exit with an error message (sorry Jordi!).  Added 
+	  another check when using last_search instead of answer.
 	- Move regcomp into rcfile.c rather than each display refresh
 	  of winio.c.  New function rcfile.c:nregcomp().
 	  This fixes much of nano's resource hogging behavior
